Html Layout complete

--- a/index.html
+++ b/index.html
@@ -15,120 +15,180 @@
   </style>
 </head>
 <body>
+  <header>
+    <img src="/images/logo-bookmark.svg" alt="Easybank logo">
+    <input type="checkbox" name="menu" id="menu">
+    <nav>
+      <ul>
+        <li><a href=""> Features</a></li>
+        <li><a href=""> Pricing</a></li>
+        <li><a href=""> Contact</a></li>
+        <li><a href=""> Login</a></li>
+        <li><a href=""> Careers</a></li>
+      </ul>
+    </nav>
+    <label for="menu">
+      <img src="/images/icon-hamburger.svg" alt="Menu Button" class="hamburger">
+      <img src="/images/icon-close.svg" alt="Close Menu Button" class="close">    
+    </label>
+    <div class="overlay"></div>
+  </header>
+  <main>
+    <section class='section-1'>
+      <img src="/images/illustration-hero.svg" alt="phones">
+      <div class="section-1-details">
+        <h1>A Simple Bookmark Manager</h1>
+        <p> A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+        <a href="/" class="invite-btn">Get it on Chrome</a>
+        <a href="/" class="invite-btn">Get it on Firefox</a>
+      </div>
+    </section>
+    <section class="section-2">
+      <h2>Features</h2>
+      <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+      <ul>
+        <li>Simple Bookmarking</li>
+        <li>Speedy Searching</li>
+        <li>Easy Sharing</li>
+      </ul>
+      <div class="tab-content">
+        <div id="Simple">
+          <img src="/images/illustration-features-tab-1.svg" alt="">
+          <div class="tab-content">
+            <h3>Bookmark in one click</h3>
+            <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
+            </p>
+            <a href="">More Info</a>  
+          </div>
+        </div>
 
-  Features
-  Pricing
-  Contact
-  Login
+        <div id="Speedy">
+          <img src="/images/illustration-features-tab-2.svg" alt="">
+          <div class="tab-content">
+            <h3> Intelligent search</h3>
+            <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.
+            </p>
+            <a href="">More Info</a>
+          </div>
+        </div>
 
-  A Simple Bookmark Manager
+        <div id="Sharing">
+          <img src="/images/illustration-features-tab-3.svg" alt="">
+          <div class="tab-content">
+            <h3> Share your bookmarks</h3>
+            <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.
+            </p>
+            <a href="">More Info</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  A clean and simple interface to organize your favourite websites. Open a new 
-  browser tab and see your sites load instantly. Try it for free.
 
-  Get it on Chrome
-  Get it on Firefox
+    <section class="section-3">
 
-  Features
+      <h2>Download the extension</h2>
+      <p> We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+      <div class="box">
+        <img src="/images/logo-chrome.svg" alt="">
+        <h5> Add to Chrome</h5>
+        <p>Minimum version 62</p>
+        <button> Add & Install Extension</button>
+      </div>
+      <div class="box">
+        <img src="/images/logo-firefox.svg" alt="">
+        <h5> Add to Firefox</h5>
+        <p>Minimum version 55</p>
+        <button> Add & Install Extension</button>
+      </div>
+      <div class="box">
+        <img src="/images/logo-firefox.svg" alt="">
+        <h5> Add to Opera</h5>
+        <p>Minimum version 46</p>
+        <button> Add & Install Extension</button>
+      </div>
+    </section>
 
-  Our aim is to make it quick and easy for you to access your favourite websites. 
-  Your bookmarks sync between your devices so you can access them on the go.
+    <section class="section-4">
+      <h3>Frequently Asked Questions</h3>
+      <p>
+        Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.
+      </p>
 
-  Simple Bookmarking
-  Speedy Searching
-  Easy Sharing
+      <ul class="accordion-container">
+        <li>
+          <div class="accordion">
+            <p>What is Bookmark?</p>
+            <img src="/images/icon-arrow.svg" alt="">
+          </div>
+          <p class="dropdown">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+          </p> 
+        </li>
 
-  Bookmark in one click
+        <li>
+        <div class="accordion">
+          <p> How can I request a new browser?</p>
+          <img src="/images/icon-arrow.svg" alt="">
+        </div>
+        <p class="dropdown">
+          Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
+          Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+          ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
+          Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+        </p> 
+      </li>
 
-  Organize your bookmarks however you like. Our simple drag-and-drop interface 
-  gives you complete control over how you manage your favourite sites.
+      <li>
+        <div class="accordion">
+          <p> Is there a mobile app?</p>
+          <img src="/images/icon-arrow.svg" alt="">
+        </div>
+        <p class="dropdown">
+          Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
+          urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
+          sollicitudin ex et ultricies bibendum.
+        
+        </p> 
+      </li>
+       
+      <li>
+        <div class="accordion">
+          <p> What about other Chromium browsers?</p>
+          <img src="/images/icon-arrow.svg" alt="">
+        </div>
+        <p class="dropdown">
+          Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam vitae neque eget nisl gravida pellentesque non ut velit.
+        </p> 
+      </li>
 
-  More Info
+      </ul>  
 
-  Intelligent search
+      <a href="/"> More Info</a>
+    </section>
 
-  Our powerful search feature will help you find saved sites in no time at all. 
-  No need to trawl through all of your bookmarks.
-
-  More Info
-
-  Share your bookmarks
-
-  Easily share your bookmarks and collections with others. Create a shareable 
-  link that you can send at the click of a button.
-
-  More Info
-
-  Download the extension
-
-  We’ve got more browsers in the pipeline. Please do let us know if you’ve 
-  got a favourite you’d like us to prioritize.
-
-  Add to Chrome
-  Minimum version 62
-  Add & Install Extension
-
-  Add to Firefox
-  Minimum version 55
-  Add & Install Extension
-
-  Add to Opera
-  Minimum version 46
-  Add & Install Extension
-
-  Frequently Asked Questions
-  
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
-
-  <!-- Question 1 -->
-  What is Bookmark?
-
-  <!-- Answer 1 -->
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
-
-  <!-- Question 2 -->
-  How can I request a new browser?
-
-  <!-- Answer 2 -->
-  Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
-
-  <!-- Question 3 -->
-  Is there a mobile app?
-
-  <!-- Answer 3 -->
-  Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum.
-
-  <!-- Question 4 -->
-  What about other Chromium browsers?
-
-  <!-- Answer 4 -->
-  Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
-
-  More Info
-
-  35,000+ already joined
-
-  Stay up-to-date with what we’re doing
-
-  Contact Us
-
-  Features
-  Pricing
-  Contact
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    <footer>
+      <div class="section-a">
+        <p>35,000+ already joined</p>
+        <h6>Stay up-to-date with what we’re doing</h6>
+        <form >
+          <input type="text">
+          <img src="/images/icon-error.svg" alt="">
+          <button>Contact Us</button>
+        </form>
+      </div>
+      <div class="section-b">
+        <img src="/images/logo-bookmark.svg" alt="Bookmark logo">
+        <ul>
+          <li><a href="/">Features</a></li>
+          <li><a href="/">Pricing</a></li>
+          <li><a href="/">Contact</a></li>
+        </ul>
+        <ul>
+          <li><img src="/images/icon-facebook.svg" alt="facebook icon"></li>
+          <li><img src="/images/icon-twitter.svg" alt="twitter icon"></li>
+        </ul>
+      </div>
+    </footer>
 </body>
 </html>
