--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
       <div class="section-1-details">
         <h1>A Simple Bookmark Manager</h1>
-        <p> A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+        <p class="word"> A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
         <a href="/" class="invite-btn" class="chrome">Get it on Chrome</a>
         <a href="/" class="invite-btn" class="firefox">Get it on Firefox</a>
       </div>
@@ -43,7 +43,7 @@
 
     <section class="section-2">
       <h2>Features</h2>
-      <p>Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+      <p class="word">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
       <ul class="tab">
         <li data-tab-target="#Simple" class="active tab">Simple Bookmarking</li>
         <li data-tab-target="#Speedy" class="tab">Speedy Searching</li>
@@ -56,7 +56,7 @@
           </div>
           <div class="details">
             <h3>Bookmark in one click</h3>
-            <p>Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
+            <p class="word">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
             </p> 
           </div>
         </div>
@@ -67,7 +67,7 @@
           </div>
           <div class="details">
             <h3> Intelligent search</h3>
-            <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.
+            <p class="word">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.
             </p>
           </div>
         </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="details">
             <h3> Share your bookmarks</h3>
-            <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.
+            <p class="word">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.
             </p>
           </div>
         </div>
@@ -88,24 +88,24 @@
 
     <section class="section-3">
       <h2>Download the extension</h2>
-      <p> We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+      <p class="word"> We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
       <ul>
         <li class="box">
           <img src="/images/logo-chrome.svg" alt="">
           <h5> Add to Chrome</h5>
-          <p>Minimum version 62</p>
+          <p class="word">Minimum version 62</p>
           <button> Add & Install Extension</button>
         </li>
         <li class="box">
           <img src="/images/logo-firefox.svg" alt="">
           <h5> Add to Firefox</h5>
-          <p>Minimum version 55</p>
+          <p class="word">Minimum version 55</p>
           <button> Add & Install Extension</button>
         </li>
         <li class="box">
           <img src="/images/logo-opera.svg" alt="">
           <h5> Add to Opera</h5>
-          <p>Minimum version 46</p>
+          <p class="word">Minimum version 46</p>
           <button> Add & Install Extension</button>
         </li>
       </ul>
@@ -114,7 +114,7 @@
 
     <section class="section-4">
       <h3>Frequently Asked Questions</h3>
-      <p>
+      <p class="word">
         Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.
       </p>
 
@@ -122,10 +122,10 @@
         <li>
           <div class="accordion">
             <div class="question">
-              <p>What is Bookmark?</p>
+              <p class="word">What is Bookmark?</p>
               <img src="/images/icon-arrow.svg" alt="">
             </div>
-            <p class="dropdown hideText">
+            <p class="dropdown hideText word">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
             </p> 
           </div>
@@ -135,10 +135,10 @@
         <li>
         <div class="accordion">
           <div class="question">
-            <p> How can I request a new browser?</p>
+            <p class="word"> How can I request a new browser?</p>
             <img src="/images/icon-arrow.svg" alt="">
           </div>
-          <p class="dropdown hideText">
+          <p class="dropdown hideText word">
             Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
             Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
             ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
@@ -151,10 +151,10 @@
       <li>
         <div class="accordion">
           <div class="question">
-            <p> Is there a mobile app?</p>
+            <p class="word"> Is there a mobile app?</p>
             <img src="/images/icon-arrow.svg" alt="">
           </div>
-          <p class="dropdown hideText">
+          <p class="dropdown hideText word">
             Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
             urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
             sollicitudin ex et ultricies bibendum.
@@ -167,10 +167,10 @@
       <li >
         <div class="accordion">
           <div class=" question last">
-            <p> What about other Chromium browsers?</p>
+            <p class="word"> What about other Chromium browsers?</p>
             <img src="/images/icon-arrow.svg" alt="">
           </div>
-          <p class="dropdown hideText">
+          <p class="dropdown hideText word">
             Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam vitae neque eget nisl gravida pellentesque non ut velit.
           </p> 
         </div>
@@ -187,9 +187,12 @@
         <p>35,000+ already joined</p>
         <h6>Stay up-to-date with what we’re doing</h6>
         <form >
-          <input type="text">
-          <small>Whoops, make sure it's an email</small>
-          <img src="/images/icon-error.svg" alt="">
+          <div class="form-group">
+            <input type="text">
+            <small>Whoops, make sure it's an email</small>
+            <img src="/images/icon-error.svg" alt="">
+          </div>
+          
           <button>Contact Us</button>
         </form>
       </div>
