--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       
       <div class="section-1-details">
-        <h1>A Simple Bookmark Manager</h1>
+        <h1 class="heading">A Simple Bookmark Manager</h1>
         <p class="word"> A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
         <a href="/" class="invite-btn" class="chrome">Get it on Chrome</a>
         <a href="/" class="invite-btn" class="firefox">Get it on Firefox</a>
@@ -42,7 +42,7 @@
     </section>
 
     <section class="section-2">
-      <h2>Features</h2>
+      <h2 class="heading">Features</h2>
       <p class="word">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
       <ul class="tab">
         <li data-tab-target="#Simple" class="active tab">Simple Bookmarking</li>
@@ -55,7 +55,7 @@
             <img src="/images/illustration-features-tab-1.svg" alt="illustration for simple bookmarking">
           </div>
           <div class="details">
-            <h3>Bookmark in one click</h3>
+            <h3 class="heading">Bookmark in one click</h3>
             <p class="word">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
             </p> 
           </div>
@@ -66,7 +66,7 @@
             <img src="/images/illustration-features-tab-2.svg" alt="illustration for Speedy Searching">
           </div>
           <div class="details">
-            <h3> Intelligent search</h3>
+            <h3 class="heading"> Intelligent search</h3>
             <p class="word">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.
             </p>
           </div>
@@ -77,7 +77,7 @@
             <img src="/images/illustration-features-tab-3.svg" alt="illustration for sharing bookmarks">
           </div>
           <div class="details">
-            <h3> Share your bookmarks</h3>
+            <h3 class="heading"> Share your bookmarks</h3>
             <p class="word">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.
             </p>
           </div>
@@ -87,24 +87,24 @@
 
 
     <section class="section-3">
-      <h2>Download the extension</h2>
+      <h2 class="heading">Download the extension</h2>
       <p class="word"> We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
       <ul>
         <li class="box">
           <img src="/images/logo-chrome.svg" alt="">
-          <h5> Add to Chrome</h5>
+          <h5 class="heading"> Add to Chrome</h5>
           <p class="word">Minimum version 62</p>
           <button> Add & Install Extension</button>
         </li>
         <li class="box">
           <img src="/images/logo-firefox.svg" alt="">
-          <h5> Add to Firefox</h5>
+          <h5 class="heading"> Add to Firefox</h5>
           <p class="word">Minimum version 55</p>
           <button> Add & Install Extension</button>
         </li>
         <li class="box">
           <img src="/images/logo-opera.svg" alt="">
-          <h5> Add to Opera</h5>
+          <h5 class="heading"> Add to Opera</h5>
           <p class="word">Minimum version 46</p>
           <button> Add & Install Extension</button>
         </li>
@@ -113,7 +113,7 @@
     </section>
 
     <section class="section-4">
-      <h3>Frequently Asked Questions</h3>
+      <h3 class="heading">Frequently Asked Questions</h3>
       <p class="word">
         Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.
       </p>
